feat: 阶段性提交 2023.11.20

--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -187,6 +187,8 @@ git 合并分支 比如我想从 master 分支合并到test分支，此时我需
 git branch -d localBranchName 删除分支
 ```
 
+45个git经典操作https://mp.weixin.qq.com/s/QEoC5Ib-zkd6r8SVFcpeUw
+
 #### 7. :last-child
 
 last-child是选择的相较于父元素的最后一个子元素，也就是同级元素。这里面会有坑，比如有一个需求是需要为除了最后一个列表项加上一个底边框。此时列表的容器为`container`，列表项为`for`循环生成的，样式为`list-item`，此时如果要选中最后一个`list-item`，这时候需要通过`.list-item:last-child`来选中最后一个，而不能通过`container :last-child`来获取，注：上面的类似下图效果
@@ -421,6 +423,9 @@ const learnListRef1 = $ref<typeof LearningList>()
                            
 // 不建议使用 type LearningListType = InstanceType<typeof LearningList>
 // const learnListRef = ref({} as LearningListType)
+                           
+// !!更新 vue3已支持InstanceType 建议使用下面版本 可以获取很好的代码补全体验
+const tabRef = ref<InstanceType<typeof tabTable>>();                           
 ```
 
 #### 21. 项目中使用icon
@@ -1270,7 +1275,9 @@ const { a, ...others } = obj; // others: {b:2,c:3}
 
 #### 62. element table的selection属性
 
-table开启多选框的时候，可以退通过 table的selection属性获取到已选的列表值
+table开启多选框的时候，可以退通过 table的selection属性获取到已选的列表值，仅对于vue2，
+
+在vue3中可以通过`table的getSelectionRows`方法获取到已选的列表，并且移除了selection属性。
 
 #### 63. vue Router beforeRouteEnter
 
@@ -1831,4 +1838,152 @@ async handlePreview(cert,i) {
 const arr = ['这是'，'换行','显示']；
 arr.join('/n');
 ```
+
+#### 89. Object.create()与Object.defineProperty()
+
+let obj = Object.create(null)与let obj = {}的区别在于，
+
+前者可以创建出更加纯净的对象，不包含原型链以及继承的属性和方法
+
+obj.name = {} 与 Object.definePorperty(obj, name, {})的区别在于，
+
+后者可以存在以下可选配置属性
+
+- `value`：属性的值
+- `writable`：属性是否可写
+- `enumerable`：属性是否可枚举
+- `configurable`：属性是否可配置
+- `get`：获取属性值的方法
+- `set`：设置属性值的方法
+
+比如
+
+```js
+Object.defineProperty(obj, 'name', {
+  value: 'John',
+  writable: false,
+  enumerable: true,
+  configurable: true
+});
+```
+
+#### 90. 45个git操作场景
+
+https://mp.weixin.qq.com/s/QEoC5Ib-zkd6r8SVFcpeUw
+
+#### 91. java项目 thymeleaf语法
+
+thymeleaf是springboot框架的模板引擎
+
+#### 92. Cookie httpOnly
+
+httpOnly后端添加可以防止客户端脚本访问数据，通过set-cookie中设置，此时前端无法通过`document.cookie`去获取，但是不会影响到发送请求携带cookie
+
+#### 93. 动态路由的坑-动态路由刷新后显示404
+
+因为是动态路由，所以刷新的时候第一次进入会发出警告，没有找到该路由，因为此时接口还没有请求到，此时就会匹配到静态的路由404，之后跳转到该页面去
+
+解决方法就是将404页面也改为动态路由，此时没匹配到该路由时会暂时白屏，之后会触发`next({ ...to, replace: true })`反复调用`router.beforeEach`，直到匹配到相应的路由
+
+参考文章：[VUE 路由守卫 next() / next({ ...to, replace: true }) / next(‘/‘) 说明](https://blog.csdn.net/qq_41912398/article/details/109231418)
+
+[踩坑记16 vue-router4 动态路由 刷新404/白屏/样式错误 next css | 退出登录 removeRoute()后 router.options.routes未更新](https://blog.csdn.net/Alloom/article/details/119726732)
+
+#### 94. 动态插槽之动态插槽名
+
+```vue
+<common-table :config="pane" class="table-container" ref="tableRef">
+ <template v-for="(item, index) in getTabConfig(pane)" :key="index" #[item!]="scope">
+   <slot :name="item" :scope="scope"></slot>
+ </template>
+</common-table>
+```
+
+参考：[动态插槽](https://blog.csdn.net/Li_Ning21/article/details/117260762)
+
+对于vue3，可以使用`#[]`来表达插槽名，感觉其余参数都可以通过`[]`表示，待验证
+
+本例子是深层插槽传递，这个是中间传递的插槽，所以插槽名都是动态的
+
+#### 95. js业务代码抽离思路
+
+每一个业务功能模块的js代码可以抽离出来单独存放，其目的不是为了复用，而是为了单独维护其所依赖的状态和方法，便于管理和后期维护，如果全部方法和参数都放在一起的情况下，会导致页面方法过多导致难以快速定位到相应的方法和状态
+
+此时可以通过hooks的方式进行导出和导入
+
+#### 96. ckeditor5接入指南
+
+通过自定义的方式构建ckeditor5也就是通过`CKEditor Online Builder`工具进行构建
+
+1. 进入官网 online Builder中定义需要的插件工具栏和语言
+
+2. 下载build包![image-20231116171214371](../img/image-20231116171214371.png)
+
+3. ckeditor5与4不同，官方文档推荐将build包放在 `src/` 和 `node_modules/` 文件夹旁边，将压缩包解压，可以将压缩包重命名为ckeditor5，方面后面下载依赖包
+
+   > Unpack it into you application main directory. The directory with the editor’s build cannot be placed inside the `src/` directory as Node will return an error. Because of that, we recommend placing the directory next to the `src/` and `node_modules/` folders
+
+4. 在原项目目录下下载依赖，`yarn add file:./ckeditor5`，此时package.json中的依赖中会多出该字段`"ckeditor5-custom-build": "file:./ckeditor5"`，此时可以看到node_modules中会有该依赖
+
+5. 另外还需要下载vue集成ckeditor的依赖，这个依赖是基座，上面那个是个性化配置
+   `yarn add @ckeditor/ckeditor5-vue`
+
+6. 引入组件有两种方式
+
+   - 全局引入（在main.ts中引入ckeditor）
+
+     ```ts
+     import CKEditor from "@ckeditor/ckeditor5-vue";
+     app.use(CKEditor)
+     ```
+
+   - 局部引入（哪里用到就在哪引入）
+
+     ```ts
+     // 这个就是引入你通过online Builder生成的build包
+     import SelfEditor from "ckeditor5-custom-build/build/ckeditor" 
+     // ckeditor基座
+     import CKEditor from "@ckeditor/ckeditor5-vue";
+     ```
+
+     ```vue
+     <template>
+       <div>
+         <ckeditor :editor="editor" v-model="editorData" :config="editorConfig">      	</ckeditor>
+       </div>
+     </template>
+     
+     <script lang="ts" setup>
+     import { ref } from "vue";
+     import ClassicEditor from "ckeditor5-custom-build/build/ckeditor"
+     import CKEditor from "@ckeditor/ckeditor5-vue";
+     
+     const ckeditor = CKEditor.component;
+     const editor = ClassicEditor;
+     const editorData = ref("");
+     
+     const editorConfig = {
+     };
+     
+     const getEditorData = () => {
+       return editorData.value
+     }
+     
+     defineExpose({
+       getEditorData
+     })
+     </script>
+     ```
+
+##### 排坑：
+
+- 需要严格按着上述步骤走，基座必须要引入
+
+- 不需要安装@ckeditor/ckeditor5-build-classic依赖，引入配置文件注意是![image-20231120142409582](../img/image-20231120142409582.png)
+
+  ```js
+  import CustomEditor from "ckeditor5-custom-build/build/ckeditor"
+  ```
+
+- 组件中会存在已有插件和新增插件的冲突，有的插件使用时互斥的，在运行时候报错的时候可以关注下这两个是否互斥
 
